s-magiccap/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: s-magiccap-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/issuer: letsencrypt-prod
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - s.magiccap.me
    secretName: s-magiccap-prod-letsencrypt
  rules:
  - host: s.magiccap.me
    http:
      paths:
      - path: /
        backend:
          serviceName: s-magiccap
          servicePort: 8000
